dev-setup-home-page-and-other files
- added new folder structure
- minor changes in home page
- setup per pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Julius</title>
+		<title>Flakes Only!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,7 +61,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">About me</a></h3>
-										<p>You can call me Juju!</p>
+										<p>Hi! I'm Juju. But you can call me Flakes!</p>
 									</header>
 								</article>
 								<article>
@@ -150,7 +150,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">jfnocon@gmail.com</a>
+										<a href="#">flakes.monster@gmail.com</a>
 									</div>
 								</section>
 								<section>
@@ -182,7 +182,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Flakes Only.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
