added-about-me-page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">About me</a></h3>
+										<h3><a href="about-me.html" class="link">About me</a></h3>
 										<p>Hi! I'm Juju. But you can call me Flakes!</p>
 									</header>
 								</article>
